@@ -79,6 +79,9 @@ set desktop wallpaper from image \fIfile\fP
 .BI \-\^\-show\-pref " n"
 open preferences dialog on page \fIn\fP
 .TP
+.B \-f\fR,\fP \-\^\-find\-files
+open a file search dialog window
+.TP
 .I directories
 directories to open
 .SH DESKTOP MANAGEMENT
